# sesmio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: bulk_send.py  fastapi_app.py  flask_app.py  native_templates.py
examples/django_project/: settings.py  views.py
src/sesmio/: __init__.py  client.py  exceptions.py  message.py  sender.py  templates.py
src/sesmio/_internal/: escape.py  logging.py  retry.py  validation.py
src/sesmio/email/: __init__.py  components.py  inliner.py  preview.py  render.py  tailwind.py  text.py
src/sesmio/integrations/: __init__.py  django.py  fastapi.py  flask.py
tests/integration/: test_bulk.py  test_client_misc.py  test_django.py  test_fastapi.py  test_flask.py  test_send_with_template.py  test_ses_send.py  test_templates.py
tests/snapshots/: minimal.html  welcome.html
tests/unit/: test_bulk.py  test_components.py  test_escape.py  test_exceptions.py  test_inliner.py  test_logging.py  test_mime_builder.py  test_render.py  test_retry.py  test_tailwind.py  test_text.py  test_validation.py
